--- a/about.html
+++ b/about.html
@@ -20,9 +20,16 @@
         <section class="apresentacao__conteudo">
 		
             <h1 class="apresentacao__conteudo__titulo"> Sobre mim </h1>
-            <p class="apresentacao__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
-            <p class="apresentacao__conteudo__texto">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat cupidatat non.</p>
-
+            <p class="apresentacao__conteudo__texto">Sou Luiz Guidini, formado em Análise e Desenvolvimento de Sistemas e apaixonado 
+            por tecnologia e inovação. Com uma trajetória sólida na área, atuo como Técnico Mecatrônico há mais de 15 anos em uma
+            multinacional, onde desenvolvi habilidades em automação, programação e integração de sistemas.</p>
+            <p class="apresentacao__conteudo__texto">Além da experiência técnica, estou sempre em busca de novas soluções inteligentes 
+            para otimizar processos e facilitar a vida das pessoas. Tenho conhecimento em desenvolvimento de software, metodologias ágeis 
+            e sou cofundador da L2M DeploySmart, uma assessoria especializada em implantação de sistemas. </p>
+            <p class="apresentacao__conteudo__texto">Aqui no meu portfólio, você encontrará projetos que refletem minha dedicação à 
+            tecnologia, desde desenvolvimento de sistemas até aplicações práticas para o dia a dia. Se quiser trocar uma ideia, entre
+            em contato!</p>
+            
         </section>
 
         <img src="./assets/imagem.png" alt="foto Luiz e Familia">
