--- a/curriculo.html
+++ b/curriculo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/styleAlura.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Sobre mim</title>
 </head>
 <body>
@@ -35,7 +35,7 @@
             </ul>
             </div>    
         </section>
-        <img src="./assets/imagem.png" alt="Foto Luiz e familia">
+        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto Luiz e familia">
     </main> 
     <footer class="rodape">
         <p>Desenvolvido por Luiz Guidini.</p>
